2006-01-04  Yen-Ju Chen <yjchenx At__ gmail>

    * Source/GNUmakefile:
    add right paths of headers in order to compile with GNUstep-make.

2006-01-06  Quentin Mathe <qmathe@club-internet.fr>

    * PreferencesKit.xclassmodel: Added.
    
2006-01-06  Quentin Mathe <qmathe@club-internet.fr>
    
    Xcode compilation restored (on Mac OS X, PreferencesKitExample was broken 
    since 2005-11-22, it is fixed now).
    * PreferencesKit.xcodeproj: Updated to include files renamed with previous
    commit and new files related to MatrixView presentation and NSPreferencePane.

2006-01-06  Quentin Mathe <qmathe@club-internet.fr>
    
    WARNING: this commit breaks Xcode project.
    Finished major refactoring started on 2005-11-20.
    * Headers/PKToolbarPresentation.h:
    * Headers/PKMatrixViewPresentation.h:
    * Headers/PKTableViewPresentation.h:
    Renamed (was PKxxxPreferencesController.h).
    * Source/PKToolbarPresentation.m:
    * Source/PKMatrixViewPresentation.m:
    * Source/PKTableViewPresentation.m: Renamed (was
    PKxxxPreferencesController.m) and updated to take in account the new
    related header names.
    * Source/GNUmakefile: Updated.

2006-01-06  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/PKTableViewPreferencesController.m (-loadUI): Added checks
    to test whether prebuiltTableView nib is correctly loaded, exceptions are
    now thrown otherwise.

2006-01-05  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/GNUmakefile: Modified to build PreferencesKit as a framework (was
    a library) in order to allow resource files like PrebuiltTableView.gorm
    to be easily deployed. Removed superfluous license notice too.
    * Source/GNUmakefile.postamble: 
    * GNUmakefile:
    Removed superfluous license notice.

2006-01-04  Yen-Ju Chen <yjchenx At__ gmail>

   * Source/PKMatrixViewPresentation.m:
   * Source/PKMatrixView.h:
   * Source/PKMatrixView.m:
   * Headers/PKMatrixViewPresentation.h: